# remotecontrol

./: .gitignore  README.md  index.css  index.html  pyproject.toml  remotecontrol.py
src/: remote_control_handler.py  state.py
