[tool.poetry]
name = "remotecontrol"
version = "0.1.0"
description = ""
authors = ["Sarah Wang <millimillenary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
isort = "^5.13.2"
mypy = "^1.14.0"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
