[project]
name = "remotecontrol"
version = "0.2.0"
description = ""
readme = "README.md"
authors = [
    { name = "Sarah Wang", email = "millimillenary@gmail.com" }
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "autopep8",
    "black",
    "isort",
    "mypy",
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
